Enhance workflow to update and push documentation
Add steps to update and commit docs/index.html from the latest report.

--- a/.github/workflows/crawler.yml
+++ b/.github/workflows/crawler.yml
@@ -161,3 +161,31 @@ jobs:
           S3_REGION: ${{ secrets.S3_REGION }}
           GITHUB_ACTIONS: true
         run: python -m trendradar
+      - name: Update docs/index.html from latest report
+        if: success()
+        run: |
+          set -e
+
+          # 找到最新日期目录，例如 output/2025-12-26
+          latest_dir=$(ls -d output/20*-*-* 2>/dev/null | sort | tail -n 1)
+          echo "Latest dir: $latest_dir"
+
+          # 你的日志显示 current 模式生成的是这个文件名
+          src="$latest_dir/html/当前榜单汇总.html"
+
+          # 如果你后面改成 daily 模式，这里可换成对应文件名
+          test -f "$src"
+
+          mkdir -p docs
+          cp "$src" docs/index.html
+          echo "Updated docs/index.html"
+
+      - name: Commit and push docs
+        if: success()
+        run: |
+          set -e
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
+          git add docs/index.html
+          git commit -m "Update TrendRadar page" || echo "No changes to commit"
+          git push
