--- a/.github/workflows/crawler.yml
+++ b/.github/workflows/crawler.yml
@@ -41,7 +41,7 @@ on:
 
 concurrency:
   group: crawler-${{ github.ref_name }}
-  cancel-in-progress: true
+  cancel-in-progress: false
 
 permissions:
   contents: write
