--- a/.github/workflows/crawler.yml
+++ b/.github/workflows/crawler.yml
@@ -161,6 +161,45 @@ jobs:
           S3_REGION: ${{ secrets.S3_REGION }}
           GITHUB_ACTIONS: true
         run: python -m trendradar
+        
+      - name: Update docs/report.html from latest report
+        if: success()
+        run: |
+          set -e
+          latest_dir=$(ls -d output/20*-*-* 2>/dev/null | sort | tail -n 1)
+          echo "Latest dir: $latest_dir"
+          src="$latest_dir/html/当前榜单汇总.html"
+          test -f "$src"
+          mkdir -p docs
+          cp "$src" docs/report.html
+
+      - name: Inject theme into docs/report.html
+        if: success()
+        run: |
+          set -e
+          test -f docs/report.html
+
+          sed -i 's#</head>#<style id="theme-bridge">\n\
+          :root{color-scheme: light dark;}\n\
+          html[data-theme="dark"]{--tr-bg:#0b1020;--tr-fg:#e6edf3;--tr-muted:#9aa4b2;--tr-border:#20304a;--tr-card:#0f172a;--tr-link:#7aa7ff;}\n\
+          html[data-theme="light"]{--tr-bg:#f6f8fa;--tr-fg:#0f172a;--tr-muted:#667085;--tr-border:#e5e7eb;--tr-card:#ffffff;--tr-link:#2563eb;}\n\
+          html,body{background:var(--tr-bg)!important;color:var(--tr-fg)!important;}\n\
+          .news-item{background:var(--tr-card)!important;border:1px solid var(--tr-border)!important;}\n\
+          .news-header,.source-name,.rank-num,.time-info{color:var(--tr-muted)!important;}\n\
+          a,.news-link{color:var(--tr-link)!important;}\n\
+          hr{border-color:var(--tr-border)!important;}\n\
+          </style>\n\
+          <script id="theme-bridge-js">\n\
+          (function(){\n\
+            function apply(t){document.documentElement.setAttribute(\"data-theme\", t===\"light\"?\"light\":\"dark\");}\n\
+            var t=null; try{t=localStorage.getItem(\"theme\");}catch(e){}\n\
+            if(!t){try{t=window.matchMedia(\"(prefers-color-scheme: light)\").matches?\"light\":\"dark\";}catch(e){t=\"dark\";}}\n\
+            apply(t);\n\
+            window.addEventListener(\"storage\", function(ev){ if(ev && ev.key===\"theme\") apply(ev.newValue); });\n\
+          })();\n\
+          </script>\n\
+          </head>#' docs/report.html || true
+        
       - name: Update docs/index.html from latest report
 
         if: success()
@@ -193,6 +232,6 @@ jobs:
           set -e
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
-          git add docs/index.html
+          git add docs/index.html docs/report.html
           git commit -m "Update TrendRadar page" || echo "No changes to commit"
           git push
