--- a/.github/workflows/crawler.yml
+++ b/.github/workflows/crawler.yml
@@ -136,30 +136,75 @@ jobs:
           set -e
           test -f docs/report.html
 
-          sed -i 's#</head>#<style id="theme-bridge">\n\
-          :root{color-scheme: light dark;}\n\
-          html[data-theme="dark"]{--tr-bg:#0b1020;--tr-fg:#e6edf3;--tr-muted:#9aa4b2;--tr-border:#20304a;--tr-card:#0f172a;--tr-link:#7aa7ff;}\n\
-          html[data-theme="light"]{--tr-bg:#f6f8fa;--tr-fg:#0f172a;--tr-muted:#667085;--tr-border:#e5e7eb;--tr-card:#ffffff;--tr-link:#2563eb;}\n\
-          html,body{background:var(--tr-bg)!important;color:var(--tr-fg)!important;}\n\
-          .container,.wrapper,.content,.main,.page{background:transparent!important;color:var(--tr-fg)!important;}\n\
-          .news-item{background:var(--tr-card)!important;border:1px solid var(--tr-border)!important;border-radius:12px!important;}\n\
-          .news-header,.source-name,.rank-num,.time-info{color:var(--tr-muted)!important;}\n\
-          .news-title{color:var(--tr-fg)!important;}\n\
-          a,.news-link{color:var(--tr-link)!important;}\n\
-          hr{border-color:var(--tr-border)!important;}\n\
-          </style>\n\
-          <script id="theme-bridge-js">\n\
-          (function(){\n\
-            function apply(t){document.documentElement.setAttribute(\"data-theme\", t===\"light\"?\"light\":\"dark\");}\n\
-            var t=null; try{t=localStorage.getItem(\"theme\");}catch(e){}\n\
-            if(!t){try{t=window.matchMedia(\"(prefers-color-scheme: light)\").matches?\"light\":\"dark\";}catch(e){t=\"dark\";}}\n\
-            apply(t);\n\
-            window.addEventListener(\"storage\", function(ev){ if(ev && ev.key===\"theme\") apply(ev.newValue); });\n\
-          })();\n\
-          </script>\n\
-          </head>#' docs/report.html
+          # 生成要注入的内容到临时文件（避免 sed 转义问题）
+          cat > /tmp/theme_bridge.html <<'EOF'
+          <style id="theme-bridge">
+            :root { color-scheme: light dark; }
 
-          echo "Injected theme-bridge into docs/report.html"
+            html[data-theme="dark"]{
+              --tr-bg:#0b1020;
+              --tr-fg:#e6edf3;
+              --tr-muted:#9aa4b2;
+              --tr-border:#20304a;
+              --tr-card:#0f172a;
+              --tr-link:#7aa7ff;
+            }
+            html[data-theme="light"]{
+              --tr-bg:#f6f8fa;
+              --tr-fg:#0f172a;
+              --tr-muted:#667085;
+              --tr-border:#e5e7eb;
+              --tr-card:#ffffff;
+              --tr-link:#2563eb;
+            }
+
+            html, body { background: var(--tr-bg) !important; color: var(--tr-fg) !important; }
+            .container, .wrapper, .content, .main, .page { background: transparent !important; color: var(--tr-fg) !important; }
+
+            .news-item{
+              background: var(--tr-card) !important;
+              border: 1px solid var(--tr-border) !important;
+              border-radius: 12px !important;
+            }
+
+            .news-header, .source-name, .rank-num, .time-info { color: var(--tr-muted) !important; }
+            .news-title { color: var(--tr-fg) !important; }
+            a, .news-link { color: var(--tr-link) !important; }
+            hr { border-color: var(--tr-border) !important; }
+          </style>
+
+          <script id="theme-bridge-js">
+            (function(){
+              function apply(t){
+                document.documentElement.setAttribute("data-theme", t === "light" ? "light" : "dark");
+              }
+              var t = null;
+              try { t = localStorage.getItem("theme"); } catch(e) {}
+              if(!t){
+                try {
+                  t = (window.matchMedia && window.matchMedia("(prefers-color-scheme: light)").matches) ? "light" : "dark";
+                } catch(e) { t = "dark"; }
+              }
+              apply(t);
+              window.addEventListener("storage", function(ev){
+                if(ev && ev.key === "theme") apply(ev.newValue);
+              });
+            })();
+          </script>
+          EOF
+
+          # 在 </head> 前插入注入内容（用 awk 更稳）
+          awk '
+            /<\/head>/ && !done {
+              while ((getline line < "/tmp/theme_bridge.html") > 0) print line
+              close("/tmp/theme_bridge.html")
+              done=1
+            }
+            { print }
+          ' docs/report.html > /tmp/report_patched.html
+
+          mv /tmp/report_patched.html docs/report.html
+          echo "Injected theme bridge into docs/report.html"
 
       - name: Commit and push docs
         if: success()
