--- a/.github/workflows/crawler.yml
+++ b/.github/workflows/crawler.yml
@@ -5,7 +5,7 @@ on:
     # ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
     # ⚠️ 试用版说明 / Trial Mode
     # ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
-    - cron: "33 * * * *"
+    - cron: "14 0-14 * * *"
   workflow_dispatch:
 
 concurrency:
