--- a/.github/workflows/crawler.yml
+++ b/.github/workflows/crawler.yml
@@ -229,6 +229,6 @@ jobs:
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
           # 提交 report.html（index.html 是你的外壳页，通常不变；加上也不影响）
-          git add docs/report.html docs/index.html
+          git add docs/history docs/report.html
           git commit -m "Update TrendRadar pages" || echo "No changes to commit"
           git push
